--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2018"
 
 [dependencies]
 xmlrpc = "0.13.1"
+base64 = "0.10.1"
+flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
 
