--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 xmlrpc = "0.13.1"
 base64 = "0.10.1"
 flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
+clap = "2.32.0"
+rpassword = "2.1.0"
+colored = "1.7.0"
 
